Pantalla de codigo y arreglos en crateAct

--- a/Front-End/app/src/main/res/values/strings.xml
+++ b/Front-End/app/src/main/res/values/strings.xml
@@ -32,8 +32,10 @@
         <item>🇲🇽 +53</item>
     </string-array>
 
-
-
+    <!--Codigo-->
+    <string name="activity.code.text.gracias">Gracias por registrarte. Hemos mandado un SMS al teléfono que has puesto arriba</string>
+    <string name="activity.code.text.reenviarEn">Reenviar codigo en </string>
+    <string name="activity.code.text.reenviar">Reenviar codigo </string>
 
 
 </resources>
