--- a/Front-End/app/src/main/res/values/strings.xml
+++ b/Front-End/app/src/main/res/values/strings.xml
@@ -40,5 +40,10 @@
     <!--Forgot Pass-->
     <string name="activity.forgotPass.text.introduceElNumDeTel">Por tu seguridad necesitamos que nos confirmes que eres tu, por favor introduce tu telefono móvil:</string>
 
+    <!--Change Pass-->
+    <string name="activity.changePass.text.changePass">Cambiar Contraseña</string>
+    <string name="activity.changePass.text.createPass">Introduce tu nueva contraseña:</string>
+    <string name="activity.changePass.hint.repeatPass">Repite la contraseña</string>
+
 
 </resources>
