--- a/Front-End/app/src/main/res/values/strings.xml
+++ b/Front-End/app/src/main/res/values/strings.xml
@@ -44,8 +44,13 @@
     <string name="activity.changePass.text.changePass">Cambiar Contraseña</string>
     <string name="activity.changePass.text.createPass">Introduce tu nueva contraseña:</string>
     <string name="activity.changePass.hint.repeatPass">Repite la contraseña</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="fragment_user_posts">Posts</string>
+    <string name="fragment_user_followers">Followers</string>
+    <string name="fragment_user_follows">Follows</string>
+    <string name="fragment_user_bio">Escribe aquí tu biografía</string>
 
 
 </resources>
